syntax = "proto3";

package pb;
option go_package = "github.com/clstb/phi/pkg/pb";

import "proto/posting.proto";
import "google/protobuf/timestamp.proto";

message Transaction {
	string id = 1;
	google.protobuf.Timestamp date = 2;
	string entity = 3;
	string reference = 4;
	string hash = 5;
	repeated Posting postings = 6;
}

message Transactions {
	repeated Transaction data = 1;
}

message TransactionsQuery {
	google.protobuf.Timestamp from = 1;
	google.protobuf.Timestamp to = 2;
	string account_name = 3;
}
